--- a/deploy/predix-logging-cluster-hostpath.yaml
+++ b/deploy/predix-logging-cluster-hostpath.yaml
@@ -1,12 +1,14 @@
-apiVersion: enterprises.upmc.com/v1
-kind: ElasticsearchCluster
+apiVersion: extensions/v1beta1
+kind: PredixLoggingCluster
 metadata:
-  name: example-es-cluster
+  name: predix-logging-cluster
 spec:
   kibana:
     image: docker.elastic.co/kibana/kibana-oss:6.1.3
-  cerebro:
-    image: upmcenterprises/cerebro:0.6.8
+  logstash:
+    image: docker.elastic.co/logstash/logstash-oss
+    tag: 6.6.1
+    image-pull-policy: IfNotPresent
   elastic-search-image: upmcenterprises/docker-elasticsearch-kubernetes:6.1.3_1
   client-node-replicas: 1
   master-node-replicas: 1
