--- a/deploy/predix-logging-cluster-minikube.yaml
+++ b/deploy/predix-logging-cluster-minikube.yaml
@@ -1,14 +1,15 @@
-apiVersion: enterprises.upmc.com/v1
-kind: ElasticsearchCluster
+apiVersion: v1Beta
+# kind: PredixloggingCluster
 metadata:
-  name: example-es-cluster
+  name: predix-logging-cluster
 spec:
   kibana:
     image: docker.elastic.co/kibana/kibana-oss:6.1.3
     image-pull-policy: Always
-  cerebro:
-    image: upmcenterprises/cerebro:0.7.2
-    image-pull-policy: Always
+  logstash:
+    image: docker.elastic.co/logstash/logstash-oss
+    tag: 6.6.1
+    image-pull-policy: IfNotPresent
   elastic-search-image: upmcenterprises/docker-elasticsearch-kubernetes:6.1.3_0
   image-pull-policy: Always
   client-node-replicas: 1
